[tool.poetry]
name = "superres"
version = "0.1.0"
description = ""
authors = ["Anuj Arora <anujarora920804@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4.1"
tensorflow-datasets = "^4.3.0"
Pillow = "^8.2.0"
absl-py = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
pylint = "^2.8.2"
isort = "^5.8.0"
pylint-fail-under = "^0.3.0"
coverage-badge = "^1.0.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
exclude = '''
(
  /(
    | \.git          # root of the project
    | \.venv
  )/
)
'''